@@ -5,10 +5,10 @@ INCLUDES = $(all_includes)
 
 libSearch_a_METASOURCES = AUTO
 
-libSearch_a_SOURCES = krsearchmod.cpp krsearchdialog.cpp krquery.cpp generalfilter.cpp advancedfilter.cpp
+libSearch_a_SOURCES = krsearchmod.cpp krsearchdialog.cpp krquery.cpp generalfilter.cpp advancedfilter.cpp profilemanager.cpp
 
 
 EXTRA_DIST = krquery.cpp krquery.h krsearchdialogbase.cpp krsearchdialogbase.h krsearchdialog.cpp krsearchdialog.h krsearchmod.cpp krsearchmod.h generalfilter.h
 
 ####### kdevelop will overwrite this part!!! (end)############
-noinst_HEADERS = advancedfilter.h
+noinst_HEADERS = advancedfilter.h profilemanager.h
