@@ -1,4 +1,5 @@
 ======================
+    ADDED: search profiles
     ADDED: searcher: TC like search ( 'text' == '*text*' )
            excluding files with '|' (ex. '*.cpp *.h | *.moc.cpp' )
     ADDED: search on remote file systems
